commitei nessa branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <body>
         teste três agora!
         teste novo
-        teste mais uma vez
-        teste maiissss uma vez
+        avacalhando o projeto hehehehehehe
     </body>
 </html>
