--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
     <body>
-        teste três agora!
-        teste novo
-        avacalhando o projeto hehehehehehe
+        commit1
     </body>
 </html>
