primeiro commit da branch A

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <body>
         commit1
         commit da branch b
+        commit1 da branch A
+        primeiro commit da branch A
     </body>
 </html>
