--- a/senha.html
+++ b/senha.html
@@ -1,9 +1,9 @@
 <div class="login">
 
 <label for="user">usuario</label>
-<input type="text" placeholder="mvabf22" id="user">
+<input type="text" placeholder="user" id="user">
 <label for="password">senha</label>
-<input type="password" placeholder="Katon*123" id="password">
+<input type="password" placeholder="password" id="password">
 
 <button type="submit">ENVIAR</button>
 </div>
